# ytd-tui

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  yt-dlp-tui.py  ytd-tui
src/ytdlp_tui/: __init__.py  __main__.py  ansi_shadow.py  app.py  commands.py  presets.py  supported_sites.py  themes.py  tui.py
tests/: test_commands.py
